...
                            .filter { isPdfToolbarPlacementTool(it) && !bottomTools.contains(it.name) && !hiddenTools.contains(it.name) }
                        Text(
                            text = titleText,
                            style = MaterialTheme.typography.titleMedium,
                            maxLines = 1,
                            overflow = TextOverflow.Ellipsis,
                            modifier = Modifier.padding(start = 12.dp).weight(1f).testTag("PageNumberIndicator")
                        )

                        if (topToolbarTools.isNotEmpty() || BuildConfig.DEBUG) {
                            val topToolbarScrollState = rememberScrollState()
                            Row(
                                modifier = Modifier
...
